# OpenCV

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/yang/opencv/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/yang/opencv/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/yang/opencv/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
